# MPAS-Analysis

./: .gitignore  .pep8speaks.yml  .stickler.yml  .travis.yml  LICENSE  MANIFEST.in  README.md  azure-pipelines.yml  config.analysis  config.default  config.example  config.template  dev-spec.txt  dev_environment.yaml  download_analysis_data.py  download_natural_earth_110m.py  example.cfg  example_e3sm.cfg  index.html  pyproject.toml  readthedocs.yml  run_analysis.py  run_mpas_analysis  run_mpas_analysis.py  setup.py
.github/: dependabot.yml  pull_request_template.md
1.10.0/: .buildinfo  authors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  versions.html
1.10.0rc1/: authors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  versions.html
1.10.0rc2/: authors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  versions.html
1.11.0/: authors.html  genindex.html  index.html  py-modindex.html  search.html  versions.html
1.11.0rc1/: authors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  versions.html
1.12.0/: .buildinfo  authors.html  genindex.html  index.html  py-modindex.html  search.html
1.13.0/: .buildinfo  authors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.14.0/: .buildinfo  authors.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html
1.2.6/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  searchindex.js
1.2.7/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  searchindex.js  versions.html
1.2.8/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  tutorials.html  versions.html
1.2.9/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  searchindex.js  tutorials.html  versions.html
1.3.0/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  tutorials.html  versions.html
1.4.0/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  tutorials.html  versions.html
1.4.0rc1/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  tutorials.html  versions.html
1.4.0rc2/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  searchindex.js  tutorials.html  versions.html
1.4.0rc3/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  tutorials.html  versions.html
1.5.0/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  tutorials.html  versions.html
1.5.0rc1/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  searchindex.js  tutorials.html  versions.html
1.6.0/: all_obs.html  analysis_tasks.html  api.html  authors.html  components.html  configuration.html  design_docs.html  e3sm.html  genindex.html  index.html  mpaso.html  mpasseaice.html  objects.inv  observations.html  ocean_obs_table.html  quick_start.html  seaice_obs_table.html  search.html  tutorials.html  (+1 more)
(+9918 files in other folders)
